switch to osgi annotations and bnd-maven-plugin